--- a/p.html
+++ b/p.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FOOD-O-HOLIC</title>
-  <link href="css/styleh.css" rel="stylesheet">
-  <link href="css/responsive.css" media="screen and (max-width:1100px)" rel="stylesheet">
+    <title>HTML</title>
+  <link href="styleform.css" rel="stylesheet">
+
   </head>
   <body>
     <label for="name">Name: &nbsp;</label>
